Fix Amarok crashes when trying to write a faulty playlist.

BUG: 303056
FIXED-IN: 2.7